--- a/css/index.css
+++ b/css/index.css
@@ -3,13 +3,19 @@ body {
     color: white;
     margin: 0;
     overflow-x: hidden;
-    font-family: sans-serif;
+    font-family: 'Segoe UI', Arial, sans-serif;
 }
 
 #particles-js {
     position: fixed;
     width: 100%;
     height: 100%;
+    background-image: url('../img/lo.png'); 
+    background-size: 200px 200px; 
+    background-position: center; 
+    background-repeat: no-repeat; 
+    opacity: 0.5; 
+    z-index: -1;
     top: 0;
     left: 0;
     z-index: 0;
@@ -103,17 +109,17 @@ body {
 }
 
 .arrow-down:hover {
-    transform: translateX(-50%) scale(1.3) rotate(15deg); /* Escala y rotación al pasar el mouse */
+    transform: translateX(-50%) scale(1.3) rotate(15deg); 
     color: #ff0000;
 }
 
-/* Nueva animación de rebote con rotación */
+
 @keyframes bounce-rotate {
     0%, 100% {
-        transform: translateY(0) rotate(0deg); /* Posición inicial */
+        transform: translateY(0) rotate(0deg); 
     }
     50% {
-        transform: translateY(-15px) rotate(-10deg); /* Rebote hacia arriba con rotación */
+        transform: translateY(-15px) rotate(-10deg); 
     }
 }
 
@@ -134,8 +140,7 @@ body {
 .welcome-title {
     font-size: 3rem;
     font-weight: bold;
-    color: rgb(255, 0, 0);
-    
+    color: rgb(255, 0, 0); 
     margin-bottom: 20px;
     font-family: 'Playfair Display', serif;
 }
@@ -149,6 +154,7 @@ body {
     justify-content: space-between; 
     width: 100%; 
     gap: 130px; 
+    margin-left: 35px;
 }
 
 
@@ -162,6 +168,7 @@ body {
 
 
 .bienvenida-imagen {
+    margin-right: 35px;
     flex: 1;
     max-width: 400px; 
     height: auto;
